# OpenLaunchDeck

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  build.ps1  openlaunchdeck.spec  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
audio_bridge/: README.md  bridge_manifest.json  build_audio_bridge.ps1  install_audio_bridge.ps1  uninstall_audio_bridge.ps1
docs/: audio_bridge.md  discord_voice_routing.md  hardware_notes.md  midi_mapping.md  performance.md  profile_format.md  release_checklist.md  soundboard_setup.md  troubleshooting.md  updating.md
installer/: README.md  openlaunchdeck.iss
native/: Cargo.toml  README.md
openlaunchdeck/: __init__.py  app.py  config_store.py  constants.py  event_bus.py  logging_setup.py  main.py  native_acceleration.py  paths.py  single_instance.py  version.py
scripts/: sync-wiki.ps1
tests/: conftest.py  test_action_editor_json.py  test_action_registry.py  test_action_result.py  test_action_runner_queue.py  test_app_icon.py  test_audio_engine.py  test_bridge_driver.py  test_config_store.py  test_dangerous_confirm.py  test_gui_simulation.py  test_hotkey_editor.py  test_launchpad_device.py  test_lighting_service.py  test_logging_setup.py  test_media_control_action.py  test_mic_bridge.py  test_midi_manager.py  test_midi_mapping.py  test_multi_action.py  test_native_acceleration.py  test_obs_websocket_action.py  test_open_url_action.py  test_output_devices.py  test_paths.py  test_performance_monitor.py  test_process_priority.py  test_profile_load_save.py  (+17 more)
(+100 files in other folders)
