[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openlaunchdeck"
version = "0.1.23"
description = "A Windows desktop macro deck app for Novation Launchpad Mini MK3."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rique" }]
dependencies = [
  "PySide6>=6.7",
  "mido>=1.3",
  "python-rtmidi>=1.5; python_version < '3.14'",
  "requests>=2.32",
  "packaging>=24.0",
  "pyautogui>=0.9.54",
  "paramiko>=3.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]
build = [
  "pyinstaller>=6.6"
]
native = [
  "maturin>=1.9"
]

[tool.setuptools.packages.find]
include = ["openlaunchdeck*"]

[tool.setuptools.package-data]
openlaunchdeck = [
  "resources/icons/*.ico",
  "resources/icons/*.png",
  "resources/icons/*.svg",
  "resources/starter_profiles/*.json",
  "resources/themes/*.qss"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
